[gd_scene load_steps=4 format=3 uid="uid://crjnw0eg0iqlp"]

[ext_resource type="Script" uid="uid://cniqgj3yw64tf" path="res://scenes/ui/Lobby.gd" id="1_r0im0"]
[ext_resource type="Theme" uid="uid://dhsgc6k51h0rn" path="res://scenes/ui/game_ui_theme.tres" id="2_kqu6k"]
[ext_resource type="FontFile" uid="uid://di7gplllef8xy" path="res://assets/ui/fonts/pixelFont-7-8x14-sproutLands.ttf" id="3_olbqe"]

[node name="Lobby" type="CanvasLayer"]
script = ExtResource("1_r0im0")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_kqu6k")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0.564706, 0.384314, 0.364706, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("3_olbqe")
theme_override_font_sizes/font_size = 90
text = "MULTIPLAYER"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HostAddressLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Host Address"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="PlayerNameLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Player Name"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"GameMenuButton"
text = "Host"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_type_variation = &"GameMenuButton"
text = "Join"

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"GameMenuButton"
text = "Start"

[node name="ItemList" type="ItemList" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 200)
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"GameMenuButton"
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer3/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/Back" to="." method="_on_back_pressed"]
